<resources>
    <string name="app_name">RepairServicesApp</string>
    <string name="imgDesc">Ciclo Coppi</string>

    <string name="pending">PENDING</string>
    <string name="assigned">ASSIGNED</string>
    <string name="awaitingBike">AWAITING_BIKE</string>
    <string name="inProcess">IN_PROCESS</string>
    <string name="accepted">ACCEPTED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="completed">COMPLETED</string>

    <string name="txtColorBlack">Black</string>
    <string name="txtColorBlue">Blue</string>
    <string name="txtColorBrown">Brown</string>
    <string name="txtColorGray">Gray</string>
    <string name="txtColorGreen">Green</string>
    <string name="txtColorOrange">Orange</string>
    <string name="txtColorPink">Pink</string>
    <string name="txtColorPurple">Purple</string>
    <string name="txtColorRed">Red</string>
    <string name="txtColorWhite">White</string>
    <string name="txtColorYellow">Yellow</string>
    <string name="txtColorMagenta">Magenta</string>
    <string name="txtColorGold">Gold</string>
    <string name="txtColorSilver">Silver</string>
    <string name="txtColorFuchsia">Fuchsia</string>
    <string name="txtColorCyan">Cyan</string>
    <string name="txtColorLime">Lime</string>
    <string name="txtColorMaroon">Maroon</string>
    <string name="txtColorAqua">Aqua</string>

    <string name="editEmailPlaceholder">Email</string>
    <string name="editPasswordPlaceholder">Password</string>
    <string name="editConfirmPassPlaceholder">Confirm Password</string>
    <string name="editProfileCurrentPasswordPlaceholder">Current Password</string>
    <string name="editProfileNewPasswordPlaceholder">New Password</string>
    <string name="editFirstNamePlaceholder">First Name</string>
    <string name="editLastNamePlaceholder">Last Name</string>
    <string name="editAddressPlaceholder">Address</string>
    <string name="editPhonePlaceholder">Phone Number</string>
    <string name="editServiceNamePlaceholder">Service Name</string>
    <string name="editServiceDescriptionPlaceholder">Service Description</string>
    <string name="editServicePricePlaceholder">Service Price</string>
    <string name="editServiceDurationPlaceholder">Service Duration (Hours)</string>
    <string name="editCommentPlaceholder">Comments</string>
    <string name="editAssignedDatePlaceholder">Date</string>
    <string name="editAssignedTimePlaceholder">Time</string>
    <string name="editMessagePlaceholder">Type a message</string>

    <string name="btnRegister">Register</string>
    <string name="btnLogin">Sign In</string>
    <string name="btnLogOut">Sign Out</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnProfileSave">Save</string>
    <string name="btnAddTechnician">Add Technician</string>
    <string name="btnAdd">Add</string>
    <string name="btnAddDate">Add Date</string>
    <string name="btnAddService">Add Service</string>
    <string name="btnUpdateService">Update Service</string>
    <string name="btnDeleteService">Delete Service</string>
    <string name="btnBook">Book</string>

    <string name="txtBikeTypeMTB">MTB</string>
    <string name="txtBikeTypeRoad">Road</string>
    <string name="txtBikeTypeBMX">BMX</string>
    <string name="txtBikeTypeElectric">Electric</string>
    <string name="txtBikeTypeKids">Kids</string>
    <string name="txtBikeTypeUrban">Urban</string>
    <string name="txtBikeTypeAmateur">Amateur</string>
    <string name="txtBikeTypeOther">Other</string>

    <string name="txtNoAccount">Don\'t have an account?</string>
    <string name="txtPrivacyPolicy">By registering, you accept all our terms and conditions.</string>
    <string name="txtRegisterLink">Register here.</string>
    <string name="txtScheduleItem">Schedule</string>
    <string name="txtHistoryItem">Service History</string>
    <string name="txtProfileItem">Profile</string>
    <string name="txtHomeItem">Administration</string>
    <string name="txtBookItem">Book a Service</string>
    <string name="txtProfileUpdated">Profile successfully updated</string>
    <string name="txtServiceAdded">Service successfully added</string>
    <string name="txtServiceUpdated">Service successfully updated</string>
    <string name="txtBookingAdded">Booking successfully added</string>
    <string name="txtBookingUpdated">Booking successfully updated</string>
    <string name="txtAvailability">Availability</string>
    <string name="txtAddServiceHour">Add a date</string>
    <string name="txtSelectTechnician">Select a technician</string>
    <string name="txtSelectService">Select a service</string>
    <string name="txtSelectDate">Select a date</string>
    <string name="txtSelectTime">Select a time</string>
    <string name="txtTitleTechnicians">Technicians</string>
    <string name="txtTitleServices">Services</string>
    <string name="txtRadioAvailable">Available</string>
    <string name="txtRadioUnavailable">Unavailable</string>
    <string name="txtDropInTime">Drop In Time</string>
    <string name="txtMorning">Morning</string>
    <string name="txtAfternoon">Afternoon</string>
    <string name="txtBikeInfo">Bicycle Information</string>
    <string name="txtBicycleType">Bicycle type</string>
    <string name="txtBicycleColor">Color</string>
    <string name="txtBicycleSize">Wheel size</string>
    <string name="txtEstimatedCostTitle">Estimated Total Cost</string>
    <string name="txtEstimatedServiceTimeTitle">Estimated Service Time</string>
    <string name="txtHours">Hours</string>
    <string name="txtDateTitle">Date</string>
    <string name="txtTimeTitle">Time</string>
    <string name="txtServicesTitle">Services</string>
    <string name="txtTechnicianTitle">Technician</string>
    <string name="txtCustomerTitle">Customer</string>
    <string name="txtCommentTitle">Comments</string>
    <string name="txtBicycleTitle">Bicycle</string>
    <string name="txtTotalCostTitle">Est. Cost</string>
    <string name="txtTotalTimeTitle">Est. Time</string>
    <string name="txtStatusTitle">Status</string>
    <string name="txtHistoryTitle">Service History</string>
    <string name="txtUpcomingBookings">Upcoming Bookings</string>
    <string name="txtNothingHereYet">Nothing here yet</string>
    <string name="txtBookingCancelled">Booking Cancelled</string>
    <string name="txtAvailabilityUpdated">Availability Updated</string>
    <string name="txtTechnicianNotAssignedYet">Technician not assigned yet</string>
    <string name="txtPhoneAppNotAvailable">Phone app not available</string>
    <string name="txtNote">Note</string>
    <string name="txtStats">Statistics</string>
    <string name="txtSelectDateAndTime">Select a date and time</string>
    <string name="txtSelectStatus">Status must be updated</string>

    <string name="txtServiceDropInTimeDesc">Customers must bring the bikes to the store. \n\nA time will be assigned for the closest available space frame you selected within the next 12 hours.</string>
    <string name="txtServiceTimeDesc">All services are validated at the store and only performed during business hours.</string>
    <string name="txtAppointmentDesc">Bookings will be automatically cancel if the bike hasn\’t been received by the technician. \n\nCustomers are able to cancel services up to 2 hours prior the drop in.</string>

    <string name="txtErrorLogin">Invalid email or password</string>
    <string name="txtErrorPassMismatch">Password doesn\'t match!</string>
    <string name="txtErrorAccountExists">An account already exists with this email</string>

    <string name="txtErrorValidEmail">Invalid email address</string>
    <string name="txtErrorValidPhone">Invalid phone number</string>
    <string name="txtErrorValidPassword">Password must be at least 6 characters</string>
    <string name="txtErrorValidName">Name must be at least 2 characters</string>
    <string name="txtErrorValidAddress">Address must be at least 5 characters</string>
    <string name="txtErrorValidLastName">Last name must be at least 2 characters</string>
    <string name="txtErrorValidCurrentPassword">Current password must be at least 6 characters</string>
    <string name="txtErrorValidNewPassword">New password must be at least 6 characters</string>
    <string name="txtErrorValidConfirmPassword">Confirm password must be at least 6 characters</string>

    <string name="txtErrorEmptyEmail">Email Required</string>
    <string name="txtErrorEmptyPassword">Password Required</string>
    <string name="txtErrorEmptyConfirmPassword">Confirm Password Required</string>
    <string name="txtErrorEmptyFirstName">First Name Required</string>
    <string name="txtErrorEmptyLastName">Last Name Required</string>
    <string name="txtErrorEmptyAddress">Address Required</string>
    <string name="txtErrorEmptyPhone">Phone Number Required</string>
    <string name="txtErrorEmptyCurrentPassword">Current Password Required</string>
    <string name="txtErrorEmptyNewPassword">New Password Required</string>
    <string name="txtErrorEmptyConfirmNewPassword">Confirm New Password Required</string>
    <string name="txtErrorBookingAssigned">Availability cannot be updated. You have bookings already assigned.</string>

    <string name="txtStatPendingBookingsTitle">Pending\nBookings</string>
    <string name="txtStatAssignedBookingsTitle">Assigned\nBookings</string>
    <string name="txtStatAwaitingBikeBookingsTitle">Awaiting\nBikes</string>
    <string name="txtStatInProcessBookingsTitle">In Process\nBookings</string>
    <string name="txtStatAcceptedBookingsTitle">Accepted\nBookings</string>
    <string name="txtStatCancelledBookingsTitle">Cancelled\nBookings</string>
    <string name="txtStatCompletedBookingsTitle">Completed\nBookings</string>
    <string name="txtStatTotalBookingsTitle">Total Bookings</string>
    <string name="txtStatTotalRevenueTitle">Total Revenue</string>
    <string name="txtStatTotalHoursTitle">Total Hours</string>
    <string name="txtStatTotalCustomersTitle">Total Customers</string>
    <string name="txtStatTotalTechniciansTitle">Total Technicians</string>
    <string name="txtStatAvailableTechniciansTitle">Available Technicians</string>
    <string name="txtStatUnavailableTechniciansTitle">Unavailable Technicians</string>

</resources>