<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ScheduleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/txtTitleServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtTitleServices"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btnAddService"
                style="@style/ButtonTextNoCaps"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_enabled"
                android:text="@string/btnAddService"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/CustomButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_disabled"
                android:text="@string/btnDeleteService"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDropInTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txtDropInTime"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="300dp"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rdMorning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMorning"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdAfternoon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAfternoon"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/txtLine3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtServiceDropInTimeDesc"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBicycleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txtBikeInfo"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/custom_spinner_bike_type"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_field"
                android:gravity="center"
                android:hint="@string/txtBicycleType"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/custom_spinner_bike_color"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_field"
                android:gravity="center"
                android:hint="@string/txtBicycleColor"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/custom_spinner_wheel_size"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_field"
                android:gravity="center"
                android:hint="@string/txtBicycleSize"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edTxtComments"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_field"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editCommentPlaceholder"
                android:inputType="text|textMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTitleServices3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txtEstimatedCostTitle"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEstimatedCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="$0"
                android:textColor="@color/blue"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitleServices5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txtEstimatedServiceTimeTitle"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEstimatedDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/blue"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLine2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtServiceTimeDesc"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnBook"
                style="@style/ButtonTextNoCaps"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_enabled"
                android:text="@string/btnBook"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>